# ChangeLog for sys-apps/calculate-install
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-2.2.8_rc1 (20 Jan 2011)

  20 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.8_rc1.ebuild:
  Bump version

*calculate-install-2.2.7 (19 Jan 2011)

  19 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.7.ebuild:
  Bump version

*calculate-install-2.2.6 (14 Jan 2011)

  14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.6.ebuild:
  Bump version

*calculate-install-2.2.5 (30 Dec 2010)

  30 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.5.ebuild:
  Bump version.

*calculate-install-2.2.4-r6 (29 Dec 2010)

  29 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.4-r6.ebuild,
  +files/calculate-install-2.2.4-fix_grub_conf.patch:
  Update install for fix grub entry transfer.

*calculate-install-2.2.4-r4 (26 Dec 2010)

  26 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.4-r4.ebuild,
  +files/calculate-install-2.2.4-fix_fstab.patch:
  Update calculate-install for fix get options from fstab.

*calculate-install-2.2.4 (23 Dec 2010)

  23 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.1-r1.ebuild,
  -files/calculate-install-2.2.1-fix_getversion.patch,
  -calculate-install-2.2.4_rc2-r2.ebuild, +calculate-install-2.2.4.ebuild:
  Bump version. Remove old.

*calculate-install-2.2.4_rc2 (22 Dec 2010)

  22 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-2.2.4_rc1.ebuild, +calculate-install-2.2.4_rc2.ebuild:
  Bump version.

*calculate-install-2.2.4_rc1 (22 Dec 2010)

  22 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-2.2.4_rc1.ebuild:
  Version bump.

*calculate-install-2.2.3 (17 Dec 2010)

  17 Dec 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>