@@ -19,7 +19,8 @@ EBUILD calculate-install-2.2.5-r1.ebuild 901 RMD160 60b58b076d58aa4a7c60738c917f
 EBUILD calculate-install-2.2.5.ebuild 692 RMD160 b8f66c47f4b10dedb9ccc3970236c5a6eedd60d9 SHA1 728dd4df27cb7fe39295dfbdf83bce70f7d1437c SHA256 bea864852221ffb9da330673440ec43ecd219a3973bf13fd55fb506a669eda92
 EBUILD calculate-install-2.2.6.ebuild 692 RMD160 69a4f91c19fc7e4b443004b6fe2fb05fe90022e7 SHA1 e8ddd787706f784ce513cf5d28cc50bb4f176da8 SHA256 3e4f28ccc63d9ed2094a2560d7201f191780bbdd96dad61de6011c2f6d763546
 EBUILD calculate-install-2.2.7.ebuild 692 RMD160 1b0e22f31b7c815f623ebfffe82e6ea2253485c8 SHA1 6633b00dc457daa7e44661db9547483558a8f721 SHA256 5dba09f572793a92fc47db8837e4f9d15577db5cb7cbf0ac4fe57d2557592734
+EBUILD calculate-install-2.2.8_rc1-r1.ebuild 750 RMD160 102be34a23ec0e1618ae62f8d638dc26f5f80fc7 SHA1 6933015e15fa7244168d83d7a15637eb5b5f99f1 SHA256 9da5f2492c7a711144aef1f4047b801cac27d830548fba9893a943c4694b1784
 EBUILD calculate-install-2.2.8_rc1.ebuild 734 RMD160 3cf2aa69c5085fe8371f6bf29a9c2fc68c6fb6e5 SHA1 6296e2bf08ffc833df162d55e437fa7bc750bb6a SHA256 57e8cc1dafaa87870266848963dca220b180a03a2420585412f96dc4e6adeb7a
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
-MISC ChangeLog 15873 RMD160 b1d2273bce13008f0383c8573a7afa2dfa5a25c9 SHA1 bfd8dabef70f4deb3521575c3be26e3815c1ac0f SHA256 4bcd3646d18c52dfef4774a0ba22591844abc26462484394964ae5d7ead2acda
+MISC ChangeLog 16040 RMD160 6bf06ba07b3c2ebae2825744961e40f54e6e20fd SHA1 9796c79454b025868ecf506adcc3de77c4488c74 SHA256 6abf1ad5a2e75cc57533602ce260f703f99c16c960c1529e2369f61e30449ed1
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
