@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-2.2.8_rc1-r1 (20 Jan 2011)
+
+  20 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-install-2.2.8_rc1-r1.ebuild:
+  Add gdisk dep.
+
 *calculate-install-2.2.8_rc1 (20 Jan 2011)
 
   20 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
